# Robotic-Chef

./: CMakeLists.txt  README.md  main.ino
Main_MP/: CMakeLists.txt  platformio.ini
Main_MP/src/: Test.cpp  def.h  gates.cpp  main.cpp
Main_MP/temp/: gates.cpp
micro_project/: CMakeLists.txt
micro_project/misc_c_files/: testfunc.cpp
micro_project/src/: Task2.ino  def.h  main.cpp
mp-clion-vscode/src/: def.h  main.cpp
new_mp/: CMakeLists.txt
new_mp/src/: Task2.cpp  Test.cpp  def.h  main.cpp
